<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dagstaatje</string>

    <string name="fragment_count">Count</string>
    <string name="fragment_input">Dagstaatje</string>
    <string name="fragment_overview">Overzicht</string>
    <string name="fragment_history">Geschiedenis</string>

    <string name="action_settings">Instellingen</string>
    <string name="zilch">€ 0.00</string>
    <string name="clear_all">Wis alles</string>
    <string name="clear">Wissen</string>
    <string name="settings_title">Overzicht</string>
    <string name="tab_name_input">Invoer</string>
    <string name="tab_name_overview">Overzicht</string>
    <string name="button_min">-</string>
    <string name="button_plus">+</string>
    <string name="button_calc">Calc.</string>
    <string name="text_first_shift">Middagdienst</string>
    <string name="text_last_shift">Avonddienst</string>
    <string name="text_start_amount">Beginkas</string>
    <string name="text_extra">Extra in kas</string>
    <string name="text_total_extra">Totaal extra in kas</string>
    <string name="text_turn_over">Omzet</string>
    <string name="text_tab">Pof</string>
    <string name="text_tab_paid">Pof betaald</string>
    <string name="text_report">Kassastrook</string>
    <string name="text_total_in">Totaal in kas</string>
    <string name="text_out">Uit kas</string>
    <string name="text_pin">PIN</string>
    <string name="text_total_out">Totaal uit kas</string>
    <string name="text_result">Kas moet zijn</string>
    <string name="text_counted">Geteld</string>
    <string name="text_difference">Verschil</string>
    <string name="text_envelope">Envelop</string>
    <string name="text_new">Nieuwe kas</string>
    <string name="text_not_filled">Niet ingevoerd</string>
    <string name="set_server_address">Server instellen</string>
    <string name="dialog_ip_address">IP adres</string>
    <string name="dialog_port">Poort</string>
    <string name="send">Versturen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="euro_teken">€</string>
    <string name="is_gelijk_aan">=</string>
    <string name="vijfhonderd">500</string>
    <string name="tweehonderd">200</string>
    <string name="honderd">100</string>
    <string name="vijftig">50</string>
    <string name="twintig">20</string>
    <string name="tien">10</string>
    <string name="vijf">5</string>
    <string name="twee">2</string>
    <string name="een">1</string>
    <string name="vijftig_cent">0,50</string>
    <string name="twintig_cent">0,20</string>
    <string name="tien_cent">0,10</string>
    <string name="vijf_cent">0,05</string>
    <string name="twee_cent">0,02</string>
    <string name="een_cent">0,01</string>
    <string name="puntjes">€ 0.00</string>
    <string name="totaal">Totaal</string>
    <string name="totaal_briefjes">Biljetten:</string>
    <string name="totaal_munten">Munten:</string>
    <string name="keer">x</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="settings_bedragkeuze_summary">Kies bij welk biljet of welke munt de app start</string>
    <string name="settings_bedragkeuze_title">Start bij een bepaal bedrag</string>
    <string name="settings_5_cents_title">Toon 5 centen</string>
    <string name="settings_5_cents_enabled">5 centen worden getoond</string>
    <string name="settings_5_cents_disabled">5 centen worden niet getoond</string>
    <string name="settings_12_cents_title">Toon 2 en 1 centen</string>
    <string name="settings_12_cents_enabled">5, 2 en 1 centen worden getoond</string>
    <string name="settings_12_cents_disabled">2 en 1 centen worden niet getoond</string>
    <string name="settings_briefjes_munten_enabled">Biljetten en munten worden getoond</string>
    <string name="settings_briefjes_munten_disabled">Biljetten en munten worden niet getoond</string>
    <string name="settings_briefjes_munten_title">Toon het aantal biljetten en munten</string>
    <string name="settings_knopjes_enabled">Knoppen worden getoond</string>
    <string name="settings_knopjes_disabled">Knoppen worden niet getoond</string>
    <string name="settings_knopjes_title">Toon + en - knoppen </string>
    <string name="settings_knopjes_lr_title">Positie van de knoppen</string>
    <string name="settings_knopjes_lr_summary">Selecteer waar de knoppen staan</string>
    <string name="settings__display_category_title">Weergave opties</string>
</resources>