<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:fillViewport="true"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_start_amount" />

            <TextView
                android:id="@+id/tvOverviewStartAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/highlight"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_extra" />

            <TextView
                android:id="@+id/tvOverviewExtra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_turn_over" />

            <TextView
                android:id="@+id/tvOverviewTurnOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_tab" />

            <TextView
                android:id="@+id/tvOverviewTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_tab_paid" />

            <TextView
                android:id="@+id/tvOverviewTabPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/highlight"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_report" />

            <TextView
                android:id="@+id/tvOverviewReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/highlight"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_total_in" />

            <TextView
                android:id="@+id/tvOverviewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_out" />

            <TextView
                android:id="@+id/tvOverviewOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_pin" />

            <TextView
                android:id="@+id/tvOverviewPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/highlight"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_total_out" />

            <TextView
                android:id="@+id/tvOverviewTotalOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/highlight"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_result" />

            <TextView
                android:id="@+id/tvOverviewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_counted" />

            <TextView
                android:id="@+id/tvOverviewCounted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/highlight"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_difference" />

            <TextView
                android:id="@+id/tvOverviewDifference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_envelope" />

            <TextView
                android:id="@+id/tvOverviewEnvelope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/highlight"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/text_new" />

            <TextView
                android:id="@+id/tvOverviewNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_filled" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>