<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/content_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_start_amount" />

            <EditText
                android:id="@+id/etStartAmount"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/text_start_amount"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_extra" />

            <EditText
                android:id="@+id/etIn"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/text_extra"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/bRemoveIn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/button_min"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lExtra_in_kas2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="125dp">

            <EditText
                android:id="@+id/etInTwo"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/text_extra"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/bAddIn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/button_plus"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llInPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/highlight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_total_extra" />

            <TextView
                android:id="@+id/tvTotalExtra"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/zilch"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_turn_over" />

            <EditText
                android:id="@+id/etTurnOver"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_turn_over"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_tab" />

            <EditText
                android:id="@+id/etTab"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_tab"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_tab_paid" />

            <EditText
                android:id="@+id/etTabPaid"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_tab_paid"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/highlight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_report" />

            <TextView
                android:id="@+id/tvReport"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/zilch"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/highlight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_total_in" />

            <TextView
                android:id="@+id/tvTotalIn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/zilch"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_out" />

            <EditText
                android:id="@+id/etOut"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_out"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/bRemoveOut"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/button_min"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lExtra_uit_kas2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="125dp">

            <EditText
                android:id="@+id/etOutTwo"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_out"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/bAddOut"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/button_plus"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOutPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_pin" />

            <EditText
                android:id="@+id/etPin"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/text_pin"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/highlight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_total_out" />

            <TextView
                android:id="@+id/tvTotalOut"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/zilch"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/highlight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_result" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/zilch"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_counted" />

            <EditText
                android:id="@+id/etCounted"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/text_counted"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/highlight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_difference" />

            <TextView
                android:id="@+id/tvDifference"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/zilch"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_envelope" />

            <EditText
                android:id="@+id/etEnvelope"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/text_envelope"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/highlight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:singleLine="true"
                android:text="@string/text_new" />

            <TextView
                android:id="@+id/tvNew"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/zilch"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>